--- a/index.html
+++ b/index.html
@@ -12,55 +12,58 @@
     />
 </head>
 <body>
-<section class="vh-100 gradient-custom">
-    <div class="container py-5 h-70">
-        <div class="row d-flex justify-content-left align-items-center h-100"">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card bg-dark text-white" style="border-radius: 1rem; box-shadow: 3px 5px 10px black;">
-                    <div class="card-body p-5 text-center">
+<img src="./assets/img/huella%20png.png" alt="" class="huella">
+<section class="h-100 gradient-form">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-10">
+                <div class="card rounded-3 text-white cuadro-login">
+                    <div class="row g-0">
+                        <div class="col-lg-6 anim-cuadro">
+                            <div class="card-body p-5 text-center">
+                                <div class="mb-md-5 mt-md-4 pb-5">
+                                    <img src="./assets/img/CTA%20logo%20blanco%20sombra.png" alt="" style="height: 90px" class="anim"><br><br>
+                                    <p class="text-white-50 mb-5">Sistema de Control de Asistencia de Becarios</p>
 
-                        <div class="mb-md-5 mt-md-4 pb-5">
+                                    <div class="form-outline form-white mb-3">
+                                        <input type="email" id="typeEmailX" class="form-control form-control-lg outlines" />
+                                        <label class="form-label" for="typeEmailX">Email</label>
+                                    </div>
 
-                            <!--<h2 class="fw-bold mb-2 text-uppercase">Entrar</h2>-->
-                            <img src="assets/img/CTA%20logo%20blanco.png" alt="" style="height: 90px">
-                            <p class="text-white-50 mb-5">Sistema de checador CTA</p>
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                                        <label class="form-label" for="typePasswordX">Contraseña</label>
+                                    </div>
 
-                            <div class="form-outline form-white mb-4">
-                                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                                <label class="form-label" for="typeEmailX">Email</label>
+                                    <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Olvidaste tu contraseña?</a></p>
+
+                                    <button class="my-element" type="submit">Entrar</button>
+                                </div>
+                                <div>
+                                    <p class="mb-0">No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Registrarse</a>
+                                    </p>
+                                </div>
                             </div>
-
-                            <div class="form-outline form-white mb-4">
-                                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                                <label class="form-label" for="typePasswordX">Contraseña</label>
-                            </div>
-
-                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Olvidaste tu contraseña?</a></p>
-
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Entrar</button>
-
-                            <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                            </div>
-
                         </div>
-
-                        <div>
-                            <p class="mb-0">No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Registrarse</a>
-                            </p>
+                        <div class="col-lg-6 d-flex align-items-center segundo-cuadro">
+                            <div class="text-white px-3 py-4 p-md-5 mx-md-4 anim-cuadro2">
+                                <center><img src="./assets/img/CTA%20logo%20blanco%20sombra.png" alt="" style="height: 60px" class="anim"><br><br></center>
+                                <p class="small mb-0 text-align">Somos la Coordinación de Tecnologías
+                                    para el Aprendizaje; operamos los servicios de TIC`s del Centro Universitario;
+                                    atendiendo a las necesidades de Telecomunicación, desarrollamos y fomentamos el
+                                    buen uso de las tecnologías a través de modalidades no convencionales de aprendizaje;
+                                    brindamos soporte tecnológico en apoyo a las actividades de investigación,
+                                    formación y docencia, extensión y vinculación, gestión y gobierno.</p>
+                            </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
